--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
+ "contributors": [
+    {
+      "name": "Waleed-Nasir",
+      "email": "www.waleednasir676@gmail.com"
+    }
+  ],
   "dependencies": {
     "firebase": "^4.12.1",
     "moment": "^2.22.0",
